# gpt-aggregated-edition

./: .gitignore  README.en.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: main.yml  publish.yml  publish_mp.yml  publish_mp_preview.yml  publish_preview.yml  release.yml  test_windows_aarch64.yml
.github 一 .github 的/workflows 一 工作流程/: main.yml
src/: App.vue  constant.ts  custom_menu.ts  extension_menu.ts  main.ts  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/extensions/: menu.json
src-tauri/icons/: icon.icns
src-tauri/plugin/: base.js  chatbot.js  chatchat.js  eb.js  erniebot.js  gptai.js  internal.js  newbing.js
src-tauri/resource/: menu.json
src-tauri/src/: command.rs  constant.rs  main.rs  menu.rs  plugin.rs  preference_util.rs  util.rs
src-tauri/src/model/: chat_content.rs  constant.rs  extension_menu.rs  mod.rs  preference_model.rs
src-tauri/src/window/: event.rs  menu.rs  mod.rs  setup.rs
src/components/: GeneralPreference.vue  Mirror.vue  NewUI.vue  WindowMode.vue
src/components/tab/: CustomMenu.vue  GeneralTab.vue  MultiTabPage.vue  Tab1.vue
src/model/: preference.ts
src/test/: demo.js
